[tool.poetry]
name = "fundraising"
version = "0.1.0"
description = ""
authors = ["Austin Botelho <austinbotelho@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
pandas = "^2.0.3"
tldextract = "^3.4.4"
plotly = "^5.15.0"
seaborn = "^0.12.2"
rush = "^2021.4.0"


[tool.poetry.scripts]     
collect = "fundraising.collector:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
